<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textColor="@color/white"
        android:text="Xác Thực Tài Khoản"
        android:textSize="20sp"

        android:gravity="center">

    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:src="@drawable/mangaimg"

            tools:ignore="ContentDescription">
        </ImageView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/white"
            android:textSize="15sp"
            tools:ignore="TextSizeCheck"></TextView>

        <EditText
            android:id="@+id/textUserVerifi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:autofillHints=""
            android:hint="@string/edtUserName"
            android:paddingStart="20dp"
            android:textColorHint="@color/white"
            tools:ignore="RtlSymmetry,TextFields,TouchTargetSizeCheck,VisualLintTextFieldSize"
            >

        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="15sp"

            android:textColor="@color/white"
            tools:ignore="TextSizeCheck" />

        <EditText
            android:id="@+id/textPasswordVerifi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            tools:ignore="RtlSymmetry,TouchTargetSizeCheck,VisualLintTextFieldSize"
            android:autofillHints="">

        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnVerifi"
            android:text="Xác thực"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle"
            >
        </Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>